--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "cd server && npm run dev",
+    "server:build": "cd server && npm run build",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
+    "build:all": "npm run build && npm run server:build",
+    "start": "node server/dist/index.js"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
@@ -22,6 +27,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
